Home page changes

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Mohana Sai Sree Bandlamudi</h1>
-            <p class="subtitle">Final Year Engineering Student | Full Stack Developer</p>
+            <p class="subtitle">Ambitious Final Year Engineering Student </p> <p class="subtitle">Passionate about building the future with code and curiosity.</p>
             <a href="#about" class="cta-button">Explore My Journey</a>
         </div>
     </section>
